--- a/Northwind.Web/Northwind.Web.csproj
+++ b/Northwind.Web/Northwind.Web.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\css\HERU.PNG" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\css\HERU.PNG" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.17">
       <PrivateAssets>all</PrivateAssets>
